changed to sql database

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,32 +1,85 @@
-name: Build and Push Docker Image
+name: Build and Deploy Docker Image with MySQL
 
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the "main" branch
+      - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }}"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
-    # Step 1: Check out the repository
+    # Step 1: Check out the code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Step 2: Log in to DockerHub
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
+
+    # Step 3: Install dependencies
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+
+    # Step 4: Wait for MySQL to be ready
+    - name: Wait for MySQL
+      run: |
+        until mysqladmin ping -h localhost -u ${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }}; do
+          echo "Waiting for MySQL to be ready..."
+          sleep 5
+        done
+
+    # Step 5: Apply database migrations
+    - name: Apply migrations
+      env:
+        DB_HOST: localhost
+        DB_PORT: 3306
+        DB_NAME: ${{ secrets.MYSQL_DATABASE }}
+        DB_USER: ${{ secrets.MYSQL_USER }}
+        DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      run: python manage.py migrate
+
+    # Step 6: Run integration tests (optional)
+    - name: Run tests
+      env:
+        DB_HOST: localhost
+        DB_PORT: 3306
+        DB_NAME: ${{ secrets.MYSQL_DATABASE }}
+        DB_USER: ${{ secrets.MYSQL_USER }}
+        DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      run: python manage.py test
+
+    # Step 7: Log in to DockerHub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME}}
-        password: ${{ secrets.DOCKER_PASSWORD}}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 3: Build the Docker image and apply migrations
-    - name: Build Docker image with migrations
-      run: |
-        docker build -t harithchin1673/patient-service:latest .
-        docker run --rm harithchin1673/patient-service:latest python manage.py migrate
+    # Step 8: Build Docker image
+    - name: Build Docker image
+      run: docker build -t your-dockerhub-username/patient-service:latest .
 
-    # Step 4: Push the Docker image to DockerHub
+    # Step 9: Push Docker image
     - name: Push Docker image
-      run: docker push harithchin1673/patient-service:latest
+      run: docker push your-dockerhub-username/patient-service:latest
