--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -72,3 +72,14 @@ jobs:
     # Step 9: Push Docker image
     - name: Push Docker image
       run: docker push harithchin1673/patient-service:latest
+
+    # Step 9: Run Docker container
+    - name: Run Docker container
+      run: |
+        docker run -d -p 8000:8000 \
+          --name patient-service \
+          -e MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
+          -e MYSQL_USER=${{ secrets.MYSQL_USER }} \
+          -e MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+          -e MYSQL_HOST=${{ secrets.MYSQL_HOST }} \
+          harithchin1673/patient-service:latest
