--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Test, and Push Docker Image
 
 on:
   push:
@@ -25,6 +25,25 @@ jobs:
     - name: Build Docker image
       run: docker build -t harithchin1673/patient-service:latest .
 
-    # Step 4: Push the Docker image to DockerHub
+    # Step 4: Run the Docker container (for testing)
+    - name: Run Docker container
+      run: |
+        docker run -d -p 8000:8000 \
+          --name patient-service \
+          harithchin1673/patient-service:latest
+
+    # Step 5: Wait for the container to be ready
+    - name: Wait for the service to start
+      run: sleep 10
+
+    # Step 6: Test the application
+    - name: Run Integration Tests
+      run: docker exec patient-service python manage.py test patients.tests.test_integration
+
+    # Step 7: Push the Docker image to DockerHub
     - name: Push Docker image
       run: docker push harithchin1673/patient-service:latest
+
+    # Step 8: Debugging - List containers (Optional)
+    - name: Debug - List Docker containers
+      run: docker ps -a
