--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -96,4 +96,12 @@ jobs:
         kubectl apply -f k8s/patient-service-deployment.yaml
         kubectl apply -f k8s/patient-service-service.yaml
 
+
+      # Step 14: Rollback Deployment on Failure
+    - name: Rollback Deployment on Failure
+      if: failure()
+      run: |
+        echo "Deployment failed. Rolling back to the previous version..."
+        kubectl rollout undo deployment patient-service
+
     # -------------------------------------------------------------------
